--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <img src="/images/ligature.png" alt="">
+  <img src="images/ligature.png" alt="">
   <p>This page is currently in the works!</p>
-  
 </body>
 </html>
