Make grid and resize image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <img src="images/ligature.png" alt="">
-  <p>This page is currently in the works!</p>
+  <div class="grid">
+    <div class="unit xs-1 s-1 m-1 l-1 logo-size">
+      <img class="img-flex" src="images/ligature.png" alt="">
+    </div>
+    <div class="unit xs-1 s-1 m-1 l-1">
+      <p>This page is currently in the works!</p>
+    </div>
+  </div>
+
 </body>
 </html>
