--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
   <meta charset="utf-8">
   <title>Coming Soon Page</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/grid.css" rel="stylesheet">
+  <link href="css/module.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i|PT+Serif:400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="grid">
-    <div class="unit xs-1 s-1 m-1 l-1 logo-size">
+  <div class="grid grid-middle display-block pad-l-2">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 logo-size unit-content-center pad-l-2 push">
       <img class="img-flex" src="images/ligature.png" alt="">
     </div>
-    <div class="unit xs-1 s-1 m-1 l-1">
-      <p>This page is currently in the works!</p>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-center pad-l-2">
+      <h1>Tyanna Bourguigon's Portolio Website</h1>
+      <h2>This page is currently in the works!</h2>
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2  push">
+      <h4>Check out my behance profile!</h4>
     </div>
   </div>
 
