--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <h1>Tyanna Bourguigon's Portolio Website</h1>
         <h2>This page is currently in the works!</h2>
       </div>
-      <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-l-1-3 push">
+      <div class="unit xs-1 s-1 m-1 l-1 push">
         <a class="" href="https://www.behance.net/bour0459f7ce">
           <i class="icon i-2">
-            <img src="images/iconmonstr-behance-3.svg" alt="behance logo">
+            <img src="images/behance-square.svg" alt="behance logo">
           </i>
         </a>
         <h5>Check out my behance profile while you wait!</h5>
