--- a/index.html
+++ b/index.html
@@ -11,25 +11,23 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i|PT+Serif:400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="">
+  <div class="wrapper">
     <div class="grid grid-middle">
-      <div class="unit xs-1 s-1 m-1-2 l-1-2 logo-size unit-content-center pad-l-2 push">
+      <div class="unit xs-1 s-1 m-1-3 l-1-3">
         <img class="img-flex" src="images/ligature.png" alt="ligature">
       </div>
-      <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-content-center pad-l-2">
+      <div class="unit xs-1 s-1 m-2-3 l-2-3">
         <h1>Tyanna Bourguigon's Portolio Website</h1>
         <h2>This page is currently in the works!</h2>
-      </div>
-      <div class="unit xs-1 s-1 m-1 l-1 push">
-        <a class="" href="https://www.behance.net/bour0459f7ce">
-          <i class="icon i-2">
-            <img src="images/behance-square.svg" alt="behance logo">
-          </i>
+        <a class="icon i-64" href="https://www.behance.net/bour0459f7ce">
+          <img class="icon-big" src="images/behance-square.svg" alt="behance logo">
         </a>
-        <h5>Check out my behance profile while you wait!</h5>
+        <h5 class="ib">Check out my behance profile while you wait!</h5>
       </div>
     </div>
   </div>
+
+
 
 </body>
 </html>
