--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i|PT+Serif:400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="wrapper">
+  <div class="wrapper pin-c">
     <div class="grid grid-middle">
-      <div class="unit xs-1 s-1 m-1-3 l-1-3">
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 island-1-2 logo">
         <img class="img-flex" src="images/ligature.png" alt="ligature">
       </div>
-      <div class="unit xs-1 s-1 m-2-3 l-2-3">
+      <div class="unit xs-1 s-1 m-2-3 l-2-3 island">
         <h1>Tyanna Bourguigon's Portolio Website</h1>
         <h2>This page is currently in the works!</h2>
         <a class="icon i-64" href="https://www.behance.net/bour0459f7ce">
